Layout issues

--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,8 @@ div#stock-content {
 
 	overflow: hidden;
 	text-align: center;
+	margin: auto;
+	max-width: 908px;
 	
 }
 
